--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="left-section">
       <h1>Fill out the Form!</h1>
-      <img src="../images/handshake.png" alt="Illustration" />
+      <img src="./handshake.png" alt="Illustration" />
       <h2>Join Our Exclusive Program</h2>
       <p>
         Apply now to be part of something amazing. Stay ahead with the latest updates and exclusive offers.
